add script for colelcting izochrones

--- a/notebooks/explore_given_data.ipynb
+++ b/notebooks/explore_given_data.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "shape = gpd.read_file(\"../data/admzones2021/admzones2021.shp\")\n",
+    "shape = gpd.read_file(\"../data/raw/admzones2021/admzones2021.shp\")\n",
     "shape.plot(figsize=(15,15), cmap='OrRd');"
    ]
   },
@@ -173,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -189,7 +191,7 @@
     }
    ],
    "source": [
-    "shape = gpd.read_file(\"../data/fishnet2021/fishnet2021.shp\")\n",
+    "shape = gpd.read_file(\"../data/raw/fishnet2021/fishnet2021.shp\")\n",
     "shape.plot(figsize=(15,15), cmap='OrRd');"
    ]
   },
@@ -202,13 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_home_job = pd.read_csv(\"../data/01_CLocation_July.csv\")\n",
-    "df_home_job1 = pd.read_csv(\"../data/01_Location_July.csv\")\n",
-    "df_home_job = pd.concat([df_home_job1, df_home_job], 0)\n",
+    "df_home_job = pd.read_csv(\"../data/raw/01_CLocation_July.csv\")\n",
+    "df_home_job1 = pd.read_csv(\"../data/raw/01_Location_July.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_home_job = pd.concat([df_home_job1, df_home_job], 0)\n",
     "\n",
     "df_home_job.rename(columns={'zid': 'cell_zid'}, inplace=True)\n",
     "\n",
@@ -218,7 +228,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cell_zid</th>\n",
+       "      <th>customers_cnt_home</th>\n",
+       "      <th>customers_cnt_job</th>\n",
+       "      <th>customers_cnt_day</th>\n",
+       "      <th>customers_cnt_move</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32909</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((37.03351220866129 55.14028664630594,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32910</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((37.04135364622309 55.14031640325421,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33261</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((37.02561751031512 55.14474813716326,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33262</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((37.03345981389939 55.14477840355769,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33263</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((37.04130213212256 55.14480816490281,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10235</th>\n",
+       "      <td>138913</td>\n",
+       "      <td>77</td>\n",
+       "      <td>455</td>\n",
+       "      <td>495</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POLYGON ((37.17539226107255 56.0121198228514, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10236</th>\n",
+       "      <td>138914</td>\n",
+       "      <td>165</td>\n",
+       "      <td>796</td>\n",
+       "      <td>884</td>\n",
+       "      <td>8</td>\n",
+       "      <td>POLYGON ((37.18340951375081 56.01214066033057,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10237</th>\n",
+       "      <td>138915</td>\n",
+       "      <td>587</td>\n",
+       "      <td>1341</td>\n",
+       "      <td>1661</td>\n",
+       "      <td>19</td>\n",
+       "      <td>POLYGON ((37.1914267768936 56.01216097673462, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10238</th>\n",
+       "      <td>138916</td>\n",
+       "      <td>1206</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>2177</td>\n",
+       "      <td>47</td>\n",
+       "      <td>POLYGON ((37.19944405219302 56.01218077206691,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10239</th>\n",
+       "      <td>139343</td>\n",
+       "      <td>75</td>\n",
+       "      <td>233</td>\n",
+       "      <td>269</td>\n",
+       "      <td>5</td>\n",
+       "      <td>POLYGON ((37.18337277695604 56.01663185670218,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10240 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cell_zid  customers_cnt_home  customers_cnt_job  customers_cnt_day  \\\n",
+       "0         32909                   4                  0                  0   \n",
+       "1         32910                  25                  8                 26   \n",
+       "2         33261                   2                  0                  2   \n",
+       "3         33262                  13                  2                 11   \n",
+       "4         33263                  10                  0                  3   \n",
+       "...         ...                 ...                ...                ...   \n",
+       "10235    138913                  77                455                495   \n",
+       "10236    138914                 165                796                884   \n",
+       "10237    138915                 587               1341               1661   \n",
+       "10238    138916                1206               1669               2177   \n",
+       "10239    139343                  75                233                269   \n",
+       "\n",
+       "       customers_cnt_move                                           geometry  \n",
+       "0                       0  POLYGON ((37.03351220866129 55.14028664630594,...  \n",
+       "1                       0  POLYGON ((37.04135364622309 55.14031640325421,...  \n",
+       "2                       0  POLYGON ((37.02561751031512 55.14474813716326,...  \n",
+       "3                       0  POLYGON ((37.03345981389939 55.14477840355769,...  \n",
+       "4                       0  POLYGON ((37.04130213212256 55.14480816490281,...  \n",
+       "...                   ...                                                ...  \n",
+       "10235                   1  POLYGON ((37.17539226107255 56.0121198228514, ...  \n",
+       "10236                   8  POLYGON ((37.18340951375081 56.01214066033057,...  \n",
+       "10237                  19  POLYGON ((37.1914267768936 56.01216097673462, ...  \n",
+       "10238                  47  POLYGON ((37.19944405219302 56.01218077206691,...  \n",
+       "10239                   5  POLYGON ((37.18337277695604 56.01663185670218,...  \n",
+       "\n",
+       "[10240 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_home_job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_home_job1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d905577f0d9948e79c965ebf60d4f2dd",
+       "model_id": "1fb9dd99ecd248728496119f413011d8",
        "version_major": 2,
        "version_minor": 0
       },
